1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libcollections_la_SOURCES,
	libcollections_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New
	variables.  Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.

1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-06-17  Alex Lancaster  <alex@santafe.edu>

	* collections.m: Removed extern from LiteralString declaration.

1998-06-15  Alex Lancaster  <alex@santafe.edu>

	* Array.m ([Array_c -describe:]): Removed cast of pointer to
	unsigned long.

1998-06-14  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* collections.h: Remove MemberType; don't adopt it in Collection.
	Remove IndexSafety.  Remove mention of MemberType in Drop.  Remove
	EndsOnly; don't adopt it in List.  Remove DupOption,
	BucketFunction, PartiallyOrdered, PartialOrderContext, and
	PartialOrderRelations; don't adopt in KeyedCollection.  Remove
	mention of duplicate key, partial ordering, and index safety from
	KeyedCollection.  Remove disabled -setIndexFromKey:,
	-getIndexFromKey, -getKeyAllocSize, -at:insert:setIndex:,
	-insertGroup, -removeKey:getKey:, -replaceKey:,
	-createIndex:setKey:, -createIndex:setMember:.

1998-06-05  Alex Lancaster  <alex@santafe.edu>

	* collections.h (LiteralString): Made an extern id <String>,
	rather than @class variable.  Added doc tag.
	(DupOption): Put space between global variable tag and @end
	directive - causing problems for make-h2x script.

	* collections.m: (LiteralString): Likewise, removed dummy
	#defines.
	
1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* collections.h: Updated documentation tags.
	(BucketFunction): -getBucketFunction now returns bucket_t.
	(CompareFunction): -getCompareFunction now returns compare_t.

1998-06-01  Alex Lancaster  <alex@santafe.edu>

	* collections.h (Collection): Added method -setIndexFromMemberLoc:
	to protocol.